feat: about-us who are we section media queries

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -47,7 +47,7 @@
     <main>
       <section role="main" class="padding-top-custom">
         <section aria-label="our mission">
-          <div class="container my-5 py-5">
+          <div class="container my-5 py-5 overflow-hidden">
             <div class="row gap-5">
               <div class="col">
                 <h2 class="fw-bold display-5 text-center mb-4">Our Mission</h2>
@@ -115,23 +115,23 @@
             <h2 id="whoweare" class="fw-bold display-5 text-center mb-3">
               Who we are
             </h2>
-            <p class="lead mb-5 text-center col-8 mx-auto">
+            <p class="lead mb-5 text-center col-11 col-lg-8 mx-auto">
               We are a team of passionate dog lovers dedicated to creating a
               safe and enriching environment for every pup. At Dogs' Garden, our
               mission is to bring joy, connection, and care to dogs and their
               owners, building a community where every tail wags happily.
             </p>
 
-            <div class="container-fluid px-5">
-              <div class="row gap-5 px-5">
-                <div class="col">
+            <div class="container-fluid">
+              <div class="row gap-4 px-0 justify-content-center">
+                <div class="col-md-5 col-xxl px-0">
                   <div class="card border-0">
                     <img
                       src="/assets/images/workers/sara.jpg"
                       class="card-img"
                       alt="photo of our head trainer Sara"
                     />
-                    <div class="card-body">
+                    <div class="card-body px-0">
                       <h4 class="card-title fw-bold mb-1">Sara Woods</h4>
                       <div>
                         <span
@@ -148,14 +148,14 @@
                   </div>
                 </div>
 
-                <div class="col">
+                <div class="col-md-5 col-xxl px-0">
                   <div class="card border-0">
                     <img
                       src="/assets/images/workers/roy.jpg"
                       class="card-img"
                       alt="photo of our dog care specialist Roy"
                     />
-                    <div class="card-body">
+                    <div class="card-body px-0">
                       <h4 class="card-title fw-bold mb-1">Roy Grey</h4>
                       <div>
                         <span
@@ -172,14 +172,14 @@
                   </div>
                 </div>
 
-                <div class="col">
+                <div class="col-md-5 col-xxl px-0">
                   <div class="card border-0">
                     <img
                       src="/assets/images/workers/maria.jpg"
                       class="card-img"
                       alt="photo of our community manager, Maria"
                     />
-                    <div class="card-body">
+                    <div class="card-body px-0">
                       <h4 class="card-title fw-bold mb-1">Maria Nowacky</h4>
                       <div>
                         <span
@@ -196,14 +196,14 @@
                   </div>
                 </div>
 
-                <div class="col">
+                <div class="col-md-5 col-xxl px-0">
                   <div class="card border-0">
                     <img
                       src="/assets/images/workers/henry.jpg"
                       class="card-img"
                       alt="photo of our play supervisor, Henry seems he's a dog"
                     />
-                    <div class="card-body">
+                    <div class="card-body px-0">
                       <h4 class="card-title fw-bold mb-1">Henry</h4>
                       <div>
                         <span
