feat: our story section responsive with media queries

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -82,16 +82,16 @@
           </div>
         </section>
 
-        <div class="container my-5 py-5">
-          <div class="row gap-5 align-items-center">
-            <div class="col">
+        <div class="container-xxl my-5 py-5">
+          <div class="row row-ourstory gap-4 gap-xl-5 align-items-center">
+            <div class="col-12 col-lg">
               <img
                 class="img-fluid rounded"
                 src="/assets/images/about-us-3.jpg"
                 alt="dog with a human hand trying to give a lick to it"
               />
             </div>
-            <div class="col">
+            <div class="col-12 col-lg">
               <h2 class="fw-bold display-5 text-center mb-4">Our story</h2>
               <p class="lead">
                 Dogs' Garden was born from a deep love for dogs and a passion
