feat: finish project by ending media query in about-us our mission section.
PROJECT FINISHED

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -47,9 +47,9 @@
     <main>
       <section role="main" class="padding-top-custom">
         <section aria-label="our mission">
-          <div class="container my-5 py-5 overflow-hidden">
-            <div class="row gap-5">
-              <div class="col">
+          <div class="container-xxl mb-5 mt-lg-4 mt-0 py-5 overflow-hidden">
+            <div class="row gap-xxl-5">
+              <div class="col-12 col-lg">
                 <h2 class="fw-bold display-5 text-center mb-4">Our Mission</h2>
                 <p class="lead">
                   At Dogs' Garden, we create a safe and joyful space where dogs
@@ -64,7 +64,7 @@
                   tail wags with joy.
                 </p>
               </div>
-              <div class="col">
+              <div class="col-12 col-lg">
                 <div class="position-relative">
                   <img
                     class="img img-custom img-custom-1"
